--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AluasApp</title>
-  <base href="/">
+  <head>
+    <meta charset="utf-8">
+    <title>Aluas</title>
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+  <header class="container text-white"><h4 class="py-2">Aluas</h4></header>
+
   <app-root></app-root>
-</body>
+
+  <footer class="container d-flex text-white py-2">
+  </footer><!-- footer -->
+  </body>
 </html>
