--- a/html/board.html
+++ b/html/board.html
@@ -19,7 +19,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
   <!-- Top container -->
   <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
-    <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
+    <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();">
+      <i class="fa fa-bars"></i>  Menu</button>
     <span class="w3-bar-item w3-right"><img src='../src/assets/simple.png' style="width:125px"></span>
   </div>
 
@@ -137,7 +138,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div>
     </div>
   </div>
-
+</div>
   <!-- Footer -->
   <footer class="w3-container w3-padding-16 w3-light-grey w3-right">
     <p>Powered by Aluas</p>
