--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,8 @@
       <span>Welcome, <strong>Heloa</strong></span><br>
       <a href="#" class="w3-button"><i class="fa fa-envelope"></i></a>
       <a href="#" class="w3-button"><i class="fa fa-user"></i></a>
-      <a href="#" class="w3-button"><i class="fa fa-cog"></i></a>
-      <button class="w3-padding-16 w3-blue w3-button" style='border-radius: 12px;'>Add activity <i
-        class="fa fa-plus-circle"></i></a>
+      <!-- <button class="w3-padding-16 w3-blue w3-button" style='border-radius: 12px;'>Add activity  -->
+      <a href="/add"> <i class="fa fa-plus-circle"></i></a>
     </div>
   </div>
 
