--- a/src/index.html
+++ b/src/index.html
@@ -57,11 +57,11 @@
 
 <div class="w3-main" style="margin-left:300px;margin-top:50px;">
   <!-- Header -->
-  <header class="w3-container" style="padding-top:22px">
+  <!-- <header class="w3-container" style="padding-top:22px">
     <h5><b><i class="fa fa-dashboard"></i> My Dashboard</b></h5>
-  </header>
+  </header> -->
   <!-- class="w3-row-padding w3-margin-bottom" -->
-  <div class="w3-row-padding w3-margin-bottom">
+  <!-- <div class="w3-row-padding w3-margin-bottom">
     <div class="w3-third">
       <div class="w3-container w3-red w3-padding-16">
         <div class="w3-left"><i class="fa fa-exclamation-triangle w3-xxxlarge"></i></div>
@@ -95,7 +95,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <app-root></app-root>
 </div>
