bug profile page scoreAcumulado

--- a/src/assets/default.html
+++ b/src/assets/default.html
@@ -57,7 +57,7 @@ div#formInfo{
 
             <!-- The Entrepreneur Section -->
             <div class="w3-center" style="max-width:89%;margin-bottom:11%;padding-left:12%;">
-              <h2 class="w3-wide">ENTREPRENEUR</h2>
+              <h2 class="w3-wide">EMPREENDEDORA</h2>
               <!-- <div class="w3-card"> -->
               <img src="/assets/photo.JPG" alt="Heloa" style="width:14%;border-radius:64%;">
               <div class="w3-container">
