--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 </head>
 
-<body class="w3-light-grey" ng-app="aluasapp">
+<body class="body-bg" ng-app="aluasapp">
 
 <app-root></app-root>
 
